--- a/public/assets/css/cb-icons.css
+++ b/public/assets/css/cb-icons.css
@@ -24,6 +24,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.cb-hide:before {
+  content: "\e926";
+}
+.cb-download:before {
+  content: "\e927";
+}
+.cb-setting:before {
+  content: "\e928";
+}
+.cb-bag-cart:before {
+  content: "\e929";
+}
+.cb-logout:before {
+  content: "\e92a";
+}
+.cb-show:before {
+  content: "\e92b";
+}
 .cb-circle-check:before {
   content: "\e924";
 }
