--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -212,12 +212,14 @@ animation: tp-rotateplane 1.2s infinite ease-in-out;border-radius: 0.5rem;}
     background: #F8F8F8;
     padding: 0.438rem;
     border-radius: 0.625rem;
+    overflow: auto;
 }
 .filter-link {
-    padding: 0.625rem 2.5rem;
+    padding: 0.625rem;
     display: block;
     border-radius: 0.5rem;
     color: var(--body-txt-clr);
+    text-wrap: nowrap;
 }
 .topFilter .list-inline-item.active .filter-link{
     background-color: var(--clr-green);
@@ -290,10 +292,11 @@ animation: tp-rotateplane 1.2s infinite ease-in-out;border-radius: 0.5rem;}
     top: 1.25rem;
 }
 .filterBtn{    
-    border: 1px solid rgba(49, 129, 56, 0.2);
+    border: 1px solid rgba(49, 129, 56, 0.2) !important;
     border-radius: 10px;
     display: inline-block;
     padding: 0.625rem 1.25rem;
+    color:#677E67 !important;
 }
 .filterBx{
      padding: 0.938rem;    
@@ -383,7 +386,8 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 .cb_cstLabel.fill { background-color: var(--clr-green); color: #fff; }
 .cb_cstLabel_2 {font-size: 10px; color: #000;font-weight: 500;background: #F3F3F3;border: 1px solid rgba(69, 161, 77, 0.2);border-radius: 100px;padding: .25rem 1.125rem;display: inline-block;}
 .cb_cstLabel_3 {font-size: var(--f-size-14); color: var(--clr-green);background-color: rgba(69, 161, 77, 0.2);border-radius: 100px;padding: .25rem 1.125rem;display: inline-block;}
-
+.cb_cstLabel_3.lab-orange{background-color: rgba(193, 148, 0, 0.1); color: #c19400;}
+.cb_cstLabel_3.lab-red{background-color: rgba(239, 68, 68, 0.1); color: #EF4444;}
 
 
 .cb_prod_title { font-size: 2.375rem; line-height: 1.3; }
@@ -456,6 +460,8 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 .cb_uploadField_wrap .fileName { white-space: nowrap; text-overflow: ellipsis; display: block; overflow: hidden; }
 .cb_uploadField_wrap.style-No-brd {border-color: transparent !important;}
 .form-group {margin-bottom: 1.375rem;}
+.form-group .icon_field{position: relative;}
+.form-group .icon_field .fieldIcon{position: absolute; line-height:1; right: 15px; top: 50%; transform: translateY(-50%); color: #677E67 !important; display: inline-flex;}
 .cst-form-f {border-radius: .5rem;border: 1px solid rgba(69, 161, 77, 0.4) !important;font-size: var(--f-size-14);padding: .813rem .75rem;color: var(--body-txt-clr) !important;}
 .cst-form-f:not(textarea) {height: 2.625rem;}
 .cst-form-f::-webkit-input-placeholder { color: var(--body-txt-clr); }
@@ -512,6 +518,8 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 .blogCard .blogImg img{height: 100%; object-fit: cover;}
 .truncate-3 { display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; }
 .truncate-2 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
+.sepLine{border-bottom: 1px solid rgba(49, 129, 56, .1);}
+.contactInfo .conInfoIcon{width: 40px; height: 40px; background-color: rgba(69, 161, 77, 0.1); display:flex; align-items: center; justify-content: center; border-radius:100%;}
 
 /**********************/
 /*** Responsive ***/
@@ -545,6 +553,16 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
    .cb_prod_title {font-size: 26px;}
    .cb_patientSatisfaction_card .lg_text {font-size: 28px;}
     .blogCard .blogImg{height: 200px;}
+
+    
+    .filterWrp{ position: fixed; top: 0; left: 0;  width:100%; height: 100vh;  z-index: 99; transition: all 0.3s ease-in-out; opacity: 0; visibility: hidden; background-color: rgba(0, 0, 0, 0.5);}
+    .filterWrp .filterBx{max-width: 300px; width:100%; height: 100%; transform: translateX(-110%); background-color: #ffffff !important;border-radius:0; padding:30px 25px;transition: all 0.3s ease-in-out;}
+    .filterWrp.show .filterBx{transform: translateX(0)}
+    .filterWrp.show {opacity: 1; visibility: visible;}
+    /* .filterBackdrop{content: ''; position: fixed; z-index: 99; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.5); width:100%; height: 100%; opacity: 0;}
+    .filterBackdrop.show{opacity: 1;} */
+    .filterClose{position: absolute; top: 10px; right: -15px; background-color: var(--clr-green) !important; padding:0; color:#ffffff !important; border: none; width:30px; height:30px; display:flex; justify-content: center; align-items: center;}
+    .filterSroll{height:calc(100dvh - 60px); overflow:auto;}
 }
 @media (max-width:991px){
 
@@ -599,9 +617,10 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
     .cb_stepsTab .nav-item::after {bottom: 0; top: auto;}
     .cartButtonTop {display: flex ; position: relative; align-items: center; justify-content: center; border-radius: 100%; background-color: #ffffff; color: #318138; width: 35px; height: 35px; border: 1px solid #318138; padding:0}
     .cartButtonTop .proNoBadge{background-color: #318138; color:#ffffff; display:block; position:absolute; top:-5px; right:-5px; line-height:17px; width:17px; height:17px;font-size:12px; border-radius:17px;}
+    .ord-BtnfullW{width: 100%;}
 }
 @media (max-width:575px){
-    
+    .mob-w100{width: 100%;}
 }
 
 
