--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -520,6 +520,7 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 .truncate-2 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
 .sepLine{border-bottom: 1px solid rgba(49, 129, 56, .1);}
 .contactInfo .conInfoIcon{width: 40px; height: 40px; background-color: rgba(69, 161, 77, 0.1); display:flex; align-items: center; justify-content: center; border-radius:100%;}
+.errorMsg{color: red; font-size: var(--f-size-14);}
 
 /**********************/
 /*** Responsive ***/
@@ -559,8 +560,6 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
     .filterWrp .filterBx{max-width: 300px; width:100%; height: 100%; transform: translateX(-110%); background-color: #ffffff !important;border-radius:0; padding:30px 25px;transition: all 0.3s ease-in-out;}
     .filterWrp.show .filterBx{transform: translateX(0)}
     .filterWrp.show {opacity: 1; visibility: visible;}
-    /* .filterBackdrop{content: ''; position: fixed; z-index: 99; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.5); width:100%; height: 100%; opacity: 0;}
-    .filterBackdrop.show{opacity: 1;} */
     .filterClose{position: absolute; top: 10px; right: -15px; background-color: var(--clr-green) !important; padding:0; color:#ffffff !important; border: none; width:30px; height:30px; display:flex; justify-content: center; align-items: center;}
     .filterSroll{height:calc(100dvh - 60px); overflow:auto;}
 }
