--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -190,7 +190,7 @@ animation: tp-rotateplane 1.2s infinite ease-in-out;border-radius: 0.5rem;}
 .footer_linksWrap .footer-item{padding-left: 0.938rem;position: relative;}
 .footer_linksWrap .footer-item:before {content: '';width: 0.313rem;height: 0.313rem;background-color: rgba(255,255,255,0.8);border-radius: 100%;display: block;position: absolute;left: 0;top: 50%;transform: translate(0, -50%);}
 .copyrightTxt {border-top: solid 1px rgba(255,255,255,0.2);padding-top: 0.938rem;margin-top: 2.188rem;}
-.tabNav-icon{max-width: 2.125rem;}
+.tabNav-icon{font-size: var(--f-size-28); color:#000000;}
 .cstNav_tabs {background: #FFFFFF;border: 1px solid rgba(49, 129, 56, 0.2);border-radius: 0.875rem;max-width: 25.625rem;margin-right: auto;margin-left: auto;overflow: hidden;}
 .cstNav_tabs .nav-link {border: none;padding: 1.563rem;margin: 0;border-radius: 0;display: inline-block;width: 50%;}
 .prescriptionBx{background: #FFFFFF;border: 1px solid rgba(49, 129, 56, 0.2);border-radius: 20px;padding: 1.563rem;}
@@ -522,6 +522,11 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 .sepLine{border-bottom: 1px solid rgba(49, 129, 56, .1);}
 .contactInfo .conInfoIcon{width: 2.5rem; height: 2.5rem; background-color: rgba(69, 161, 77, 0.1); display:flex; align-items: center; justify-content: center; border-radius:100%;}
 .errorMsg{color: red; font-size: var(--f-size-14);}
+
+/* about Page */
+.abTagWrp{display:flex; gap:10px;}
+.abTagWrp li{padding: 8px 15px; background-color: rgba(69, 161, 77, 0.2); color:#1D3024; border-radius:25px; display: flex; gap: 5px; align-items: center;}
+
 
 /**********************/
 /*** Responsive ***/
