--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -126,7 +126,7 @@ input[type=number] {-moz-appearance: textfield;}
 .mb__35{margin-bottom: 2.188rem}
 .mb__40{margin-bottom: 2.5rem}
 .mt__80{margin-top: 5rem;}
-.lats-p p:last-child{margin-bottom: 0;}
+.last-p p:last-child{margin-bottom: 0;}
 .primary-clr{color: var(--body-txt-clr)}
 .secondary-clr{color: var(--clr-secondary)}
 .clr-green{color:var(--clr-green) !important;}
@@ -554,7 +554,10 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 /* about Page */
 .abTagWrp{display:flex; gap:10px;}
 .abTagWrp li{padding: 8px 15px; background-color: rgba(69, 161, 77, 0.2); color:#1D3024; border-radius:25px; display: flex; gap: 5px; align-items: center;}
-
+.cstAccordion .accordion-item{border: none; border-radius: 0; border-bottom: 1px solid rgba(69, 161, 77, 0.2); padding:18px 0;}
+.cstAccordion .accordion-button{background-color: #ffffff;  padding:0; font-weight: 500; font-size: var(--f-size-18); color:#000000; box-shadow: none;}
+.cstAccordion .accordion-body{background-color: #ffffff; padding:0; padding-top:10px; color: #677E67;}
+.cstAccordion .accordion-button::after { width: 15px; height: 15px; object-fit: cover; background-size: contain; }
 
 /**********************/
 /*** Responsive ***/
